navigation mobile fix

--- a/assets/new_layout/css/navigation.css
+++ b/assets/new_layout/css/navigation.css
@@ -134,17 +134,13 @@
       padding-right: 10px;
    }
 
-   .navigation-content {
-      flex-direction: column;
-      align-items: flex-start;
-   }
-
-   .navigation-right {
-       margin-left: 0;
-       margin-top: 10px;
-   }
-
    .navigation-left {
       margin-top: 10px;
+  }
+
+  .navigation-label {
+     text-overflow: ellipsis;
+     overflow: hidden;
+     max-width: 40px;
   }
 }
