--- a/assets/new_layout/css/schedule.css
+++ b/assets/new_layout/css/schedule.css
@@ -236,7 +236,7 @@
       padding: 5px 10px;
     }
   
-    .schedule__nav {
+    . __nav {
       margin-left: 0;
     }
   
